# zelan

./: .env  .env.example  .gitignore  .prettierrc.js  .prettierrc.mjs  CLAUDE.md  Cargo.toml  Dockerfile  FUTURE.md  IMPLEMENTATION_PLAN.md  INTEGRATION_PLAN.md  LEARNINGS.md  README.md  REFACTOR_PLAN.md  components.json  docker-compose.yml  electron.vite.config.ts  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vite.renderer.config.ts  websocket-test-client.html
docs/: EVENT_FILTER_IMPLEMENTATION.md  REQUIREMENTS.md  ROADMAP.md  WEBSOCKET_API.md  websocket-api.md
electron/: main.ts  preload.ts
electron/core/: bootstrap.ts  index.ts
electron/core/adapters/: adapterManager.ts  baseAdapter.ts  index.ts  obsAdapter.ts  testAdapter.ts  types.ts
electron/core/auth/: authService.ts  index.ts  tokenManager.ts
electron/core/config/: adapterSettingsManager.ts  configManager.ts  index.ts  userDataManager.ts
electron/core/events/: eventBus.ts  eventCache.ts  eventStream.ts  index.ts  types.ts
electron/core/websocket/: index.ts  websocketServer.ts
electron/store/: adapterSettingsStore.ts  configStore.ts  index.ts  tokenStore.ts  userDataStore.ts
electron/trpc/router/: index.ts
electron/trpc/server/: router.ts
electron/trpc/shared/: types.ts
electron/trpc/shared/types/: token.ts
examples/: start_all.sh  twitch_example.sh  websocket_client.js  websocket_client.py
notes/: ARCHITECTURE.md  DEVELOPMENT_NOTES.md  ERRORS.md  FUTURE.md  PROJECT_STATUS.md  README.md  REFACTOR_PLAN.md  ROADMAP.md  TROUBLESHOOTING.md
scripts/: migrate.sh
shared/: README.md
shared/types/: adapters.ts  auth.ts  config.ts  events.ts  index.ts  tokens.ts  websocket.ts
src/: App.css  App.tsx  README.md  api.rs  error.rs  index.css  lib.rs  main.rs  main.tsx  renderer.ts  routeTree.gen.ts  service.rs  style.css  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  MIGRATION_PLAN.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: websocket_api.md
src-tauri/src/: error.rs  event_bus.rs  lib.rs  main.rs  plugin.rs  recovery.rs
src-tauri/src/adapters/: base.rs  common.rs  http_client.rs  mod.rs  obs.rs  obs_callback.rs  test.rs  test_callback.rs  twitch.rs  twitch_api.rs  twitch_auth.rs  twitch_auth_callback.rs  twitch_eventsub.rs
src-tauri/src/adapters/obs/: adapter.rs  callback.rs  mod.rs
src-tauri/src/adapters/test/: adapter.rs  callback.rs  mod.rs
src-tauri/src/adapters/tests/: mod.rs  obs_test.rs  test_helpers.rs  test_test.rs  twitch_api_test.rs  twitch_auth_test.rs  twitch_eventsub_test.rs  twitch_test.rs
src-tauri/src/adapters/twitch/: adapter.rs  api.rs  auth.rs  auth_callback.rs  eventsub.rs  mod.rs
src-tauri/src/auth/: commands.rs  mod.rs  service.rs  storage.rs  token.rs  token_manager.rs
src-tauri/src/auth/providers/: mod.rs  twitch.rs
src-tauri/src/callback_system/: README.md  mod.rs  tests.rs
src-tauri/src/common/: concurrent_map.rs  event_registry.rs  mod.rs  retry.rs  shared_state.rs  tests.rs
src-tauri/src/events/: mod.rs  streams.rs
src-tauri/src/flow/: mod.rs
src-tauri/src/tests/: event_bus_test.rs  flow_test.rs  lib_test.rs  mod.rs  recovery_test.rs
src-tauri/tests/: lib.rs
src-tauri/tests/integration/: adapter_lifecycle_test.rs  callback_integrity_test.rs  event_bus_test.rs  flow_tracing_test.rs  mod.rs  test_harness.rs  websocket_server_test.rs  ws_client.rs  ws_test_harness.rs
src/adapters/: base.rs  http_client.rs  mod.rs  obs.rs  test.rs  twitch.rs  twitch_api.rs  twitch_auth.rs  twitch_eventsub.rs
src/api/: handlers.rs  mod.rs  routes.rs  server.rs
src/auth/: api_key.rs  mod.rs  oauth.rs  token_manager.rs
src/backend/: event-bus.ts  index.ts  state.ts  types.ts
src/backend/adapters/: base-adapter.ts  obs-adapter.ts  test-adapter.ts
src/components/: AdapterCard.tsx  AdapterStatusList.tsx  ConfigurationForm.tsx  Dashboard.tsx  ErrorNotification.tsx  EventBusStats.tsx  EventsDemo.tsx  ObsDemo.tsx  Settings.tsx  SettingsDemo.tsx  StatusIndicator.tsx  TrpcDemo.css  TrpcDemo.tsx  WebSocketInfo.tsx  adapter-card.tsx  adapter-status-list.tsx  configuration-form.tsx  developer-debug.tsx  event-bus-stats.tsx  footer.tsx  header.tsx  index.ts  status-indicator.tsx  websocket-info.tsx  window-controls.tsx
src/components/ui/: scroll-area.tsx
src/config/: mod.rs
src/core/: event_bus.rs  mod.rs  service.rs
src/hooks/: index.ts  use-adapter-control.ts  use-data-fetching.ts  use-tauri-command.ts  useAdapterControl.ts  useAppState.ts  useDataFetching.ts  useTauriCommand.ts
src/lib/: utils.ts
src/lib/core/: bootstrap.ts  index.ts
src/lib/core/adapters/: adapterManager.ts  baseAdapter.ts  index.ts  obsAdapter.ts  testAdapter.ts  types.ts
src/lib/core/auth/: authService.ts  index.ts  tokenManager.ts
src/lib/core/config/: adapterSettingsManager.ts  configManager.ts  index.ts  userDataManager.ts
src/lib/core/events/: eventBus.ts  eventCache.ts  eventStream.ts  index.ts
src/lib/hooks/: index.ts  useAdapter.ts  useAdapterSettings.ts  useAuth.ts  useConfig.ts  useElectronAPI.ts  useEventBus.ts  useEvents.ts  useObservable.ts  useTrpc.ts  useUserPreferences.ts  useWebSocketServer.ts  useWebSocketServerTrpc.ts
src/lib/trpc/: client.ts
src/main/: index.ts
src/main/adapters/: index.ts
src/main/services/: index.ts
src/main/trpc/: context.ts  index.ts
src/preload/: index.d.ts  index.ts  trpc.ts
src/renderer/src/: App.tsx  main.tsx  routeTree.gen.ts  router.tsx  types.d.ts
src/routes/: __root.tsx  developer.tsx  index.tsx  routes.tsx  settings.tsx
src/shared/adapters/: index.ts
src/shared/auth/: index.ts
src/shared/core/: index.ts
src/shared/errors/: ErrorTypes.ts  index.ts
src/shared/trpc/: index.ts
src/shared/types/: events.ts  reconnection.ts
src/shared/utils/: rx-trpc.ts  subscription-manager.ts  type-guards.ts
src/store/: app-store.ts
src/types/: electron.d.ts  global.d.ts  index.ts
src/views/: home.tsx
src/websocket/: client_preferences.rs  mod.rs  server.rs
(+125 files in other folders)
