[package]
name = "zelan-api"
version = "0.1.0"
edition = "2021"
description = "A containerized API service for streaming platform data aggregation"
authors = ["OmnyPro"]

[lib]
name = "zelan"
path = "src/lib.rs"

[[bin]]
name = "zelan-api"
path = "src/main.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
async-trait = "0.1.51"
async-stream = "0.3.5"

# WebSockets
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = "0.3.17"
futures = "0.3.28"

# Web Framework
axum = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
reqwest = { version = "0.12.12", features = ["json"] }

# Time Handling
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1.0.42"
thiserror = "2.0.11"
fastrand = "2.0.1"

# Utilities
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Service-Specific Dependencies
obws = { version = "0.14.0", features = ["builder", "events"] }
twitch_api = { version = "0.7.0", features = ["eventsub", "helix", "hmac", "client", "reqwest"] }
twitch_oauth2 = { version = "0.15.2", features = ["client", "reqwest"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Configuration
dotenvy = "0.15.7"
bytes = { version = "1.10.0", default-features = false }
http = "1.2.0"

[dev-dependencies]
mockito = "1.6.1"