[package]
name = "zelan"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zelan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
async-trait = "0.1.51"
async-stream = "0.3.5"

# WebSockets
tokio-tungstenite = "0.26.2"
futures-util = "0.3.17"

# Web Framework
axum = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }

# Time Handling
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1.0.42"

# Service-Specific Dependencies
obws = { version = "0.14.0", features = ["events"] }
twitch_oauth2 = "0.15.1"
twitch_api2 = "0.6.1"

dotenvy = "*"
