[package]
name = "zelan"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zelan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "2" 
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
async-trait = "0.1.51"
async-stream = "0.3.5"

# WebSockets
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = "0.3.17"
futures = "0.3.28"

# Web Framework
axum = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
reqwest = { version = "0.12.12", features = ["json"] }

# Time Handling
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1.0.42"

# Utilities
uuid = { version = "1.7.0", features = ["v4", "serde"] }

# Service-Specific Dependencies
obws = { version = "0.14.0", features = ["builder", "events"] }
twitch_api = { version = "0.7.0", features = ["eventsub", "helix", "hmac"] }
twitch_oauth2 = { version = "0.15.1", features = ["client", "reqwest"] }

dotenvy = "*"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tauri-plugin-log = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
